--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -58,7 +58,7 @@
 .search-bar-input{
     font-size: larger;
     width: 90%;
-    height: 100%;
+    height: 110%;
     border: none;
     margin: 0;
     padding: 0;
@@ -73,10 +73,12 @@
 .search-bar-button{
     width: 10%;
     height: 100%;
-    font-size: medium;
     color: lightgreen;
     background-color: transparent;
     border: none;
+}
+.SearchIcon{
+    padding: 1px;
 }
 .transaction-list{
     grid-area: transaction-list;
@@ -87,6 +89,7 @@
 @media only screen and (max-width: 600px) {
     .page-body{
         justify-items: center;
+        margin-top: 0;
     }
     .dashboard-card{
         align-items: center;
@@ -99,7 +102,7 @@
         height: min-content;
     }
     .search-bar-input{
-        font-size: small;
+        font-size: x-small;
         width: 75%;
     }
     .search-bar{
@@ -108,7 +111,7 @@
     .search-bar-form{
         justify-content: space-between;
     }
-    .search-bar-button{
+    .SearchIcon{
         font-size: x-small;
     }
     #balance-number{
@@ -117,5 +120,8 @@
     .add-trans-button {
         width: 20vh;
         height: 5vh;
+    }
+    .transaction-list{
+        width: 100%;
     }
 }
